--- a/src/assets/stylesheet/global.css
+++ b/src/assets/stylesheet/global.css
@@ -145,6 +145,14 @@ body {
   @apply rounded-xl backdrop-blur-[5px] bg-white/65 shadow-lg ring-1 ring-black/5;
 }
 
+.glassmorphism-select {
+  @apply rounded-xl backdrop-blur-[5px] bg-white/20 shadow-lg ring-1 ring-black/5;
+}
+
+.glassmorphism-parent {
+  @apply rounded-xl before:backdrop-blur-md before:backdrop-hack bg-white/65 shadow-lg ring-1 ring-black/5;
+}
+
 .overlay {
   z-index: 0;
   position: fixed;
