feat(web): add mood preview tab

--- a/src/assets/stylesheet/global.css
+++ b/src/assets/stylesheet/global.css
@@ -145,6 +145,10 @@ body {
   @apply rounded-xl backdrop-blur-[5px] bg-white/65 shadow-lg ring-1 ring-black/5;
 }
 
+.glassmorphism-mood {
+  @apply rounded-xl backdrop-blur-[5px] bg-black/65 shadow-lg ring-1 ring-black/5;
+}
+
 .glassmorphism-select {
   @apply rounded-xl backdrop-blur-[5px] bg-white/20 shadow-lg ring-1 ring-black/5;
 }
