feat(web): add feedback

--- a/src/assets/stylesheet/global.css
+++ b/src/assets/stylesheet/global.css
@@ -66,6 +66,11 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  textarea:focus,
+  input:focus {
+    @apply focus-visible:ring-0 focus-visible:ring-offset-0;
+  }
 }
 
 @layer utilities {
